--- a/client/packages/shell/public/index.html
+++ b/client/packages/shell/public/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="http://localhost:3000/remoteEntry.js"></script>
         <script type="text/javascript" src="http://localhost:3001/remoteEntry.js"></script>
         <script type="text/javascript" src="http://localhost:3002/remoteEntry.js"></script>
+        <script type="text/javascript" src="http://localhost:3003/remoteEntry.js"></script>
     </head>
     <body style="margin: 0;">
         <div id="main"></div>
